#55 - (feature/password-forgot-reset)
* Password forgot/reset application support completed

* Git hook change

* Code review changes

* github workflow changes

* Code review changes

* Code review changes

* App test performance change

* Code review changes
